# FuxCPApplication

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
myproject_artefacts/Debug/myproject.app/Contents/: Info.plist
myproject_artefacts/JuceLibraryCode/: Info.txt
myproject_artefacts/JuceLibraryCode/Debug/: Defs.txt
myproject_artefacts/JuceLibraryCode/myproject/: Info.plist
src/audio/: AudioPlayer.h
src/audio/synth/: SimpleSynth.cpp  SimpleSynth.h
src/controller/: AppController.cpp  AppController.h
src/model/: CantusFirmus.h  CantusProblem.cpp  CantusProblem.h  ConstraintChecker.h  ConstraintsApplier.h  ConstraintsDefinition.h  ConstraintsSettings.cpp  ConstraintsSettings.h  CounterpointSolution.h  FuxTypes.h  GenerationInput.h  NoteConverter.h  VoiceTypeMapper.h
src/service/: GenerationService.cpp  GenerationService.h
src/ui/: MainComponent.cpp  MainComponent.h  main.cpp
src/ui/WorkArea/: WorkAreaPanel.cpp  WorkAreaPanel.h
src/ui/footer/: FooterPanel.cpp  FooterPanel.h
src/ui/header/: HeaderPanel.cpp  HeaderPanel.h
src/ui/history/: HistoryPanel.cpp  HistoryPanel.h
src/ui/keyboard/: Keyboard.cpp  Keyboard.h  KeyboardComponent.cpp  KeyboardComponent.h
src/ui/leftPanel/: LeftPanel.cpp  LeftPanel.h
src/ui/optionsPanel/: OptionsPanel.cpp  OptionsPanel.h  OptionsPanelHelpers.cpp  OptionsPanelHelpers.h  OptionsPanelStyle.cpp  OptionsPanelStyle.h
src/ui/optionsPanel/components/: ClickableTitle.h  ColumnBox.h  StyledLabel.h  VoiceBox.cpp  VoiceBox.h
src/ui/optionsWindow/: OptionsPanel.cpp  OptionsPanel.h
